k8s/ec2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-api-ec2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golang-api
  template:
    metadata:
      labels:
        app: golang-api
    spec:
      containers:
      - name: golang-api
        image: 362708816803.dkr.ecr.ap-northeast-2.amazonaws.com/golang-api
        ports:
        - containerPort: 8080
      nodeSelector:
        eks.amazonaws.com/compute-type: ec2
---
apiVersion: v1
kind: Service
metadata:
  name: golang-api-ec2
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: golang-api
