k8s/fargate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fargate-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fargate-app
  template:
    metadata:
      labels:
        app: fargate-app
    spec:
      containers:
      - name: fargate-container
        image: 362708816803.dkr.ecr.ap-northeast-2.amazonaws.com/golang-api:latest
        ports:
        - containerPort: 8080
      securityContext:
        fsGroup: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: fargate-service
spec:
  selector:
    app: fargate-app
  ports:
    - port: 8080
      targetPort: 8080
